[gd_scene load_steps=3 format=2]

[ext_resource path="res://World/MapTeleporter/MapTeleporter.gd" type="Script" id=1]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 4.15907, 3.55213, 5.64109 )

[node name="MapTeleporter" type="Area"]
input_ray_pickable = false
monitorable = false
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
one_shot = true
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="Timer" to="." method="load_level"]
